cleaned up feedback from meeting; added examples and an image

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -2037,7 +2037,7 @@ h5.attrib a:hover {
   <section>
       <myColBox>
           <article>
-            <h1 id="what-are-key-unique-parts-of-your-story-">What Are Key/Unique Parts of Your Story?</h1>
+            <h2 id="what-are-key-unique-parts-of-your-story-">What Are Key / Unique Parts of Your Story?</h2>
 
           </article>
       </myColBox>
@@ -2158,8 +2158,10 @@ h5.attrib a:hover {
             <h1 id="write-your-bio">Write Your Bio</h1>
 <ul>
 <li>Write a short blurb (speaker bio, articles, etc)</li>
-<li>Write a longer bio (website, blog, etc)</li>
-<li>Use descriptive language</li>
+<li><p>Write a longer bio (website, blog, etc)</p>
+</li>
+<li><p>Use descriptive language</p>
+</li>
 <li>Use action verbs</li>
 <li>Sound Excited!</li>
 </ul>
@@ -2170,11 +2172,11 @@ h5.attrib a:hover {
   <section>
       <myColBox>
           <article>
-            <h1 id="final-edits-">Final edits:</h1>
+            <h1 id="final-edits">Final edits</h1>
 <ul>
 <li>Use the tools you have</li>
 <li>Quantify with data</li>
-<li>Invert the negatives</li>
+<li>Turn negatives into positives</li>
 <li>Give credit to personal experience</li>
 </ul>
 
@@ -2202,6 +2204,8 @@ h5.attrib a:hover {
 <ul>
 <li>I build / I’ve built</li>
 <li>I lead / I’ve lead</li>
+<li>I design(ed)</li>
+<li>I presented</li>
 </ul>
 
           </article>
@@ -2213,8 +2217,8 @@ h5.attrib a:hover {
             <h1 id="be-specific">Be Specific</h1>
 <ul>
 <li>I’ve been a ____ for x years</li>
-<li>I organize</li>
-<li>Recently I’ve been</li>
+<li>I organize </li>
+<li>Recently I’ve been architecting ...</li>
 </ul>
 
           </article>
@@ -2231,19 +2235,13 @@ h5.attrib a:hover {
   <section>
       <myColBox>
           <article>
-            
-          </article>
-      </myColBox>
-  </section>
-  <section>
-      <myColBox>
-          <article>
             <h1 id="topics-and-ideas-for-talks">Topics and ideas for talks</h1>
 <ul>
 <li>Things you can teach</li>
 <li>Things you want to learn`</li>
 <li>A story about something you or your team did</li>
 <li>Something you&#39;ve accomplished</li>
+<li>Something you failed at and what you learned from it</li>
 </ul>
 
           </article>
@@ -2291,6 +2289,7 @@ h5.attrib a:hover {
 <li>Pay attention to how they will reimburse</li>
 </ul>
 </li>
+<li>Does the country require you to get a visa?</li>
 </ul>
 
           </article>
@@ -2331,6 +2330,41 @@ h5.attrib a:hover {
   <section>
       <myColBox>
           <article>
+            <h1 id="rejection-happens">REJECTION HAPPENS</h1>
+<ul>
+<li>Financial</li>
+<li>Topic doesn&#39;t fit</li>
+<li>A lot of submissions for few spots</li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="tips-to-handle-rejection">Tips to Handle Rejection</h1>
+<ul>
+<li>Don&#39;t publicly complain, whine or worse</li>
+<li>You can ask for feedback on your submissions</li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="acceptance-happens-too">Acceptance Happens too</h1>
+<p><img src="OG%20Party%20Parrot.gif" alt="OG Party Parrot"></p>
+<p><strong> You can still say no if plans have changed </strong></p>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
             <h1 id="the-abstract">The abstract</h1>
 
           </article>
@@ -2347,7 +2381,8 @@ h5.attrib a:hover {
 <li>Readability</li>
 <li>Timeframe</li>
 <li>Proofread</li>
-<li><a href="https://twitter.com/friendlytester/status/962782536089956352">https://twitter.com/friendlytester/status/962782536089956352</a></li>
+<li><a href="https://twitter.com/friendlytester/status/962782536089956352">The Friendly Tester</a></li>
+<li><a href="https://twitter.com/aahunsberger/status/977188376653844486">Ashley&#39;s tips for Abstracts</a></li>
 </ul>
 
           </article>
@@ -2436,7 +2471,7 @@ h5.attrib a:hover {
           <article>
             <h1 id="write-a-talk-proposal-">Write a talk proposal!</h1>
 <ul>
-<li>3 minutes to brainstorom a proposal for a 30-minute presentation</li>
+<li>3 minutes to brainstorm a proposal for a 30-minute presentation</li>
 <li>Start writing proposal, following worksheet</li>
 <li>5 minutes</li>
 </ul>
