cleaned up feedback from meeting; added examples and an image

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -2356,7 +2356,7 @@ h5.attrib a:hover {
       <myColBox>
           <article>
             <h1 id="acceptance-happens-too">Acceptance Happens too</h1>
-<p><img src="OG%20Party%20Parrot.gif" alt="OG Party Parrot"></p>
+<p><img src="OGPartyParrot.gif" alt="OG Party Parrot"></p>
 <p><strong> You can still say no if plans have changed </strong></p>
 
           </article>
