cleanup and adding images

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -2317,12 +2317,12 @@ h5.attrib a:hover {
           <article>
             <h1 id="you-submit-an-abstract">You submit an abstract</h1>
 <ul>
-<li>Provide a description of your talk<ul>
-<li>if accepted, this is put on the conference website</li>
+    <li>Provide a description of your talk</li>
+    <li>if accepted, this is put on the conference website</li>
 </ul>
-</li>
-</ul>
-
+          </article>
+          <article>
+              <img src="img/PleasePleasePlease.gif">
           </article>
       </myColBox>
   </section>
