rearranged the title page

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -1827,19 +1827,19 @@ h5.attrib a:hover {
 <div class="reveal">
     <div class="slides">
         <section>
-      <myColBox>
-          <article>
-            <h1 id="preparing-your-first-conference-talk-">Preparing Your First Conference Talk!</h1>
-<ul>
-<li>Ashley Hunsberger @aahunsberger</li>
-<li>DeeDee Lavinder @ddlavinder</li>
-<li>Emily Stamey @elstamey
-@WWCodeRaleigh</li>
-</ul>
-<p><img src="./img/WWCode_Logo_Raleigh_Durham.png" alt="WWCRDU logo"></p>
+            <myTitleBox><h3>Preparing Your First Conference Talk!</h3></myTitleBox>
+              <myColBox>
+                  <article>
+                    <p>Ashley Hunsberger @aahunsberger
+                    <br>DeeDee Lavinder @ddlavinder
+                    <br>Emily Stamey @elstamey
+                    <br>@WWCodeRaleigh</p>
+                  </article>
+                <article>
+                    <img src="./img/WWCode_Logo_Raleigh_Durham.png" alt="WWCRDU logo">
+                </article>
 
-          </article>
-      </myColBox>
+              </myColBox>
   </section>
   <section>
       <myColBox>
@@ -2313,7 +2313,7 @@ h5.attrib a:hover {
       </myColBox>
   </section>
   <section>
-      <myColBox>
+      <myRowBox>
           <article>
             <h1 id="you-submit-an-abstract">You submit an abstract</h1>
 <ul>
@@ -2324,7 +2324,7 @@ h5.attrib a:hover {
           <article>
               <img src="img/PleasePleasePlease.gif">
           </article>
-      </myColBox>
+      </myRowBox>
   </section>
   <section>
       <myColBox>
