--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -1827,19 +1827,19 @@ h5.attrib a:hover {
 <div class="reveal">
     <div class="slides">
         <section>
-            <myTitleBox><h3>Preparing Your First Conference Talk!</h3></myTitleBox>
-              <myColBox>
-                  <article>
-                    <p>Ashley Hunsberger @aahunsberger
-                    <br>DeeDee Lavinder @ddlavinder
-                    <br>Emily Stamey @elstamey
-                    <br>@WWCodeRaleigh</p>
-                  </article>
-                <article>
-                    <img src="./img/WWCode_Logo_Raleigh_Durham.png" alt="WWCRDU logo">
-                </article>
+      <myColBox>
+          <article>
+            <h1 id="preparing-your-first-conference-talk-">Preparing Your First Conference Talk!</h1>
+<ul>
+<li>Ashley Hunsberger @aahunsberger</li>
+<li>DeeDee Lavinder @ddlavinder</li>
+<li>Emily Stamey @elstamey
+@WWCodeRaleigh</li>
+</ul>
+<p><img src="./img/WWCode_Logo_Raleigh_Durham.png" alt="WWCRDU logo"></p>
 
-              </myColBox>
+          </article>
+      </myColBox>
   </section>
   <section>
       <myColBox>
@@ -1898,15 +1898,13 @@ h5.attrib a:hover {
       </myColBox>
   </section>
   <section>
-      <myRowBox>
+      <myColBox>
           <article>
             <h1 id="let-s-sit-down-and-get-started">Let&#39;s sit down and get started</h1>
+<p><img src="./img/HereWeGo.gif" alt="Here We Go"></p>
 
           </article>
-          <article>
-              <img src="img/HereWeGo.gif">
-          </article>
-      </myRowBox>
+      </myColBox>
   </section>
   <section>
       <myColBox>
@@ -2313,18 +2311,17 @@ h5.attrib a:hover {
       </myColBox>
   </section>
   <section>
-      <myRowBox>
+      <myColBox>
           <article>
             <h1 id="you-submit-an-abstract">You submit an abstract</h1>
 <ul>
-    <li>Provide a description of your talk</li>
-    <li>if accepted, this is put on the conference website</li>
+<li>Provide a description of your talk</li>
+<li>if accepted, this is put on the conference website</li>
 </ul>
+<p><img src="img/PleasePleasePlease.gif" alt="Please Please Please"></p>
+
           </article>
-          <article>
-              <img src="img/PleasePleasePlease.gif">
-          </article>
-      </myRowBox>
+      </myColBox>
   </section>
   <section>
       <myColBox>
@@ -2536,9 +2533,28 @@ h5.attrib a:hover {
           <article>
             <h1 id="resources">Resources</h1>
 <ul>
-<li><a href="HelpMeAbstract.com">HelpMeAbstract.com</a></li>
-<li><a href="http://speaking-easy.com/">SpeakingEasy</a></li>
 <li><a href="https://www.writespeakcode.com/">Write/Speak/Code Conference Aug 1-4 NYC</a></li>
+<li><a href="http://HelpMeAbstract.com">HelpMeAbstract.com</a></li>
+<li><a href="http://speaking-easy.com/">SpeakingEasy</a></li>
+<li><a href="https://github.com/coryhouse/speaker-starter-kit">Technical Speaker Starter Kit</a></li>
+<li><a href="https://www.womenwhotech.com/resources">Women Who Tech</a></li>
+<li><a href="https://speakerinnen.org/">Join this list of Speakers</a></li>
+<li><a href="http://lanyrd.com/">Speaker bio on Lanyrd - possibly going down?</a></li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="list-of-open-cfps">List of Open CFPs</h1>
+<ul>
+<li><a href="https://cfp-tracker.glitch.me/">List of open CFPs on Glitch</a></li>
+<li><a href="https://joind.in/event/callforpapers">Joind.in List of open CFPs</a></li>
+<li><a href="https://www.papercall.io/events">Papercall</a></li>
+<li><a href="http://www.callbackwomen.com/">Twitter account announcing CFPs for underrepresented people</a></li>
+<li><a href="http://lanyrd.com/calls/">Lanyrd - possibly going down?</a></li>
 </ul>
 
           </article>
