added cfps to reveal slide deck and fixed problem with first attempt

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -1898,15 +1898,13 @@ h5.attrib a:hover {
       </myColBox>
   </section>
   <section>
-      <myRowBox>
+      <myColBox>
           <article>
             <h1 id="let-s-sit-down-and-get-started">Let&#39;s sit down and get started</h1>
+<p><img src="./img/HereWeGo.gif" alt="Here We Go"></p>
 
           </article>
-          <article>
-              <img src="img/HereWeGo.gif">
-          </article>
-      </myRowBox>
+      </myColBox>
   </section>
   <section>
       <myColBox>
@@ -2536,9 +2534,28 @@ h5.attrib a:hover {
           <article>
             <h1 id="resources">Resources</h1>
 <ul>
-<li><a href="HelpMeAbstract.com">HelpMeAbstract.com</a></li>
-<li><a href="http://speaking-easy.com/">SpeakingEasy</a></li>
 <li><a href="https://www.writespeakcode.com/">Write/Speak/Code Conference Aug 1-4 NYC</a></li>
+<li><a href="http://HelpMeAbstract.com">HelpMeAbstract.com</a></li>
+<li><a href="http://speaking-easy.com/">SpeakingEasy</a></li>
+<li><a href="https://github.com/coryhouse/speaker-starter-kit">Technical Speaker Starter Kit</a></li>
+<li><a href="https://www.womenwhotech.com/resources">Women Who Tech</a></li>
+<li><a href="https://speakerinnen.org/">Join this list of Speakers</a></li>
+<li><a href="http://lanyrd.com/">Speaker bio on Lanyrd - possibly going down?</a></li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="list-of-open-cfps">List of Open CFPs</h1>
+<ul>
+<li><a href="https://cfp-tracker.glitch.me/">List of open CFPs on Glitch</a></li>
+<li><a href="https://joind.in/event/callforpapers">Joind.in List of open CFPs</a></li>
+<li><a href="https://www.papercall.io/events">Papercall</a></li>
+<li><a href="http://www.callbackwomen.com/">Twitter account announcing CFPs for underrepresented people</a></li>
+<li><a href="http://lanyrd.com/calls/">Lanyrd - possibly going down?</a></li>
 </ul>
 
           </article>
